fix sharedaddy margin on tablet and down
fix sharedaddy margin on tablet and down

--- a/style.css
+++ b/style.css
@@ -1882,6 +1882,9 @@ body div.slideshow-window * img {
 		position: fixed;
 		z-index: 99999;
 	}
+	.sharedaddy iframe {
+		margin-left: 30px;
+	}
 }
 @media screen and (max-width: 880px) {
 	#main h2, #main h3, #main h4 {
